tests/assets/test_suites/w3c_wsdl20/documents/bad/Service-15B/Service.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/Service-15B/Service.wsdl -->
<!-- Copyright © 2007-03-23 05:50 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/Service"
	xmlns:tns="http://example.org/Service"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:wsoap="http://www.w3.org/ns/wsdl/soap"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<wsdl:documentation>
		This test shows an invalid use of a Service. An empty address is
		specified of the endpoint.

		This document violates assertion Endpoint-1061.
	</wsdl:documentation>

	<wsdl:interface name="EchoInterface">
		<wsdl:operation name="Echo"
			pattern="http://www.w3.org/ns/wsdl/in-out">
			<wsdl:input element="#any" />
			<wsdl:output element="#any" />
		</wsdl:operation>
	</wsdl:interface>

	<wsdl:binding name="EchoSOAPBinding"
		type="http://www.w3.org/ns/wsdl/soap"
		wsoap:protocol="http://www.w3.org/2003/05/soap/bindings/HTTP/" />

	<wsdl:service name="EchoService" interface="tns:EchoInterface">
		<wsdl:endpoint name="SOAPEndpoint" binding="tns:EchoSOAPBinding"
			address="" />
	</wsdl:service>
</wsdl:description>
